Update homepage copy and project list

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solid Gig</title>
 
-  <!-- 😎 emoji favicon -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😎</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 fill=%22%230d1117%22/><text x=%2250%22 y=%2262%22 text-anchor=%22middle%22 font-size=%2246%22 fill=%22%2358a6ff%22 font-family=%22JetBrains Mono, monospace%22>SG</text></svg>">
 
   <!-- Font: JetBrains Mono -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -103,33 +102,27 @@
 <body>
   <div class="container">
     <h1>Solid Gig</h1>
-    <div class="subtitle">A media studio turning data into opportunities.</div>
+    <div class="subtitle">A datastory studio</div>
 
     <pre>
-<span class="project-title">CompoundFox.com 🦊</span>
-Let your money make money for you — The roadmap to financial freedom.
-<span class="tag">Launched</span>
-
-<a href="https://compoundfox.com" target="_blank">Visit CompoundFox →</a>
-    </pre>
-
-    <pre>
-<span class="project-title">NoBullSaaS.com ♉</span>
-We help grandpa and grandma understand SaaS. Also 5-year-olds and CXOs, and anyone pretending to be both.
-<span class="tag inprogress">Coming soon</span>
+<span class="project-title">NoBullSaaS.com</span>
+We help you understand SaaS in plain English
+<span class="tag">Live</span>
 
 <a href="https://nobullsaas.com" target="_blank">Visit NoBullSaaS →</a>
     </pre>
 
     <pre>
-<span class="project-title">HungryStack.com 🍜</span>
-The internet argues about food. We just show you what everyone actually agrees tastes good.
-<span class="tag planning">Planning</span>
+<span class="project-title">KillBloat.com</span>
+We show you which SaaS tools do the same job for less money.
+<span class="tag inprogress">In progress</span>
+
+<a href="https://killbloat.com" target="_blank">Visit KillBloat →</a>
     </pre>
 
     <footer>
-      Built with ✨ by CC Lee — Simple tools, clear data.<br>
-      📬 <a href="mailto:cc@solidgig.com">cc@solidgig.com</a><br>
+      Built by CC Lee.<br>
+      <a href="mailto:cc@solidgig.com">cc@solidgig.com</a><br>
       © 2025 CC Lee
     </footer>
   </div>
