Remove KillBloat link and simplify footer

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       margin-top: 0.25rem;
       background: #238636;
       color: white;
-      font-size: 0.9rem;
+      font-size: 1.1rem;
       padding: 3px 10px;
       border-radius: 4px;
     }
@@ -91,7 +91,7 @@
     footer {
       margin-top: 3rem;
       color: #6b7280;
-      font-size: 0.9rem;
+      font-size: 1.1rem;
       border-top: 1px solid #30363d;
       padding-top: 1rem;
       text-align: center;
@@ -116,14 +116,10 @@ We help you understand SaaS in plain English
 <span class="project-title">KillBloat.com</span>
 We show you which SaaS tools do the same job for less money.
 <span class="tag inprogress">In progress</span>
-
-<a href="https://killbloat.com" target="_blank">Visit KillBloat →</a>
     </pre>
 
     <footer>
-      Built by CC Lee.<br>
-      <a href="mailto:cc@solidgig.com">cc@solidgig.com</a><br>
-      © 2025 CC Lee
+      <a href="mailto:cc@solidgig.com">cc@solidgig.com</a> © 2025 Solid Gig Sdn Bhd
     </footer>
   </div>
 </body>
