--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <pre>
 <span class="project-title">NoBullSaaS.com</span>
-SaaS in plain English - What it does. Who it's for. What they don't tell you.
+What does this SaaS do, who it's for, what it doesn't tell you.
 <span class="tag">Live</span>
 
 <a href="https://nobullsaas.com" target="_blank">Visit NoBullSaaS →</a>
