--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
   <div class="container">
     <h1>Solid Gig</h1>
-    <div class="subtitle">A datastory studio</div>
+    <div class="subtitle">A digital product studio.</div>
 
     <pre>
 <span class="project-title">NoBullSaaS.com</span>
