Tweak KillBloat copy

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ What does this SaaS do, who it's for, what it doesn't tell you.
 
     <pre>
 <span class="project-title">KillBloat.com</span>
-We show you which SaaS tools do the same job for less money.
+Which SaaS tools do the same job for less money.
 <span class="tag inprogress">In progress</span>
     </pre>
 
